resources/elasticsearch/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana-http
spec:
  ports:
  - name: http
    port: 5601
    protocol: TCP
    targetPort: http
  selector:
    app: kibana
  type: ClusterIP
